<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">七彩生活</string>
    <string name="commen_text_ok">确定</string>
    <string name="commen_commit">提交</string>
    <string name="time_tip">%d秒</string>
	<!-- 首页 -->
	<string name="scan_text">将二维码放入框内, 即可自动扫描</string>
	<string name="text_home">首页</string>
	<string name="text_class">分类</string>
	<string name="text_cart">购物车</string>
	<string name="text_my">我的</string>
	<string name="title_activity_test">Test</string>

	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="error_tip"><Data><![CDATA[ <font color="red">%1$s</font> ]]></Data></string>
	<string name="loading">正在加载...</string>
	
	<!--公共部分-->
	<string name="text_date">日期</string>
	<string name="text_time">时间</string>
	<string name="text_business">商家</string>
	<string name="text_to">至</string>
	<string name="text_contacts">联系人</string>
	<string name="text_phone">联系电话</string>
	<string name="text_check_code">验证码</string>
	<string name="text_load_code">获取验证码</string>
	<string name="text_commit">提交</string>


	<!-- 舌尖宝 -->
	<string name="text_banquet_type">宴会类型</string>
	<string name="text_offter_space">是否提供场地</string>
	<string name="text_desk_num">桌数</string>
	<string name="text_budget">预算</string>
	<string name="text_desk_end">元/桌</string>
	<string name="text_life_restaurant">七彩生活餐饮有限公司</string>
	<string name="text_p_hit">请输入特殊要求，如不能满足，我们将会与您联系</string>
	<string name="text_contacts_hit">请输入您的名字</string>
	<string name="text_phone_hit">请输入您的联系号码</string>
	<string name="text_code_hit">请填写您手机收到的验证码</string>

    <!-- 乐居宝 -->
    <string name="title_setting_house_estate">完善小区信息</string>
    <string name="title_fix_house_estate">修改小区信息</string>
    <string name="title_iam_house_holder">我是房东</string> 
    <string name="title_decration_reserve">装修预约</string> 
    <string name="title_nimble_payment">便捷缴费</string> 
    <string name="title_iam_roomer">我是房客</string> 
    <string name="title_housemaking_service">家政服务</string> 
    <string name="title_house_mall">居家商城</string>
    <string name="text_near">附近</string>
    <string name="text_map">地图</string>
    <string name="text_release">我要发布</string>
    <string name="text_city">城市</string>
    <string name="text_category">类型</string>
    <string name="text_area">面积</string>
    <string name="text_source">来源</string>

	<string name="register_name_digits">._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>



</resources>
