<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_5"
            android:paddingTop="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_5"
            android:text="联系方式"
            android:textSize="@dimen/sp_12" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_5"
            android:text="（请留下您的联系方式，我们会第一时间联系您！）"
            android:textSize="@dimen/sp_12" />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/white">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:layout_alignParentTop="true"
            android:background="@color/line" />

        <TextView
            android:id="@+id/tv14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/dp_10"
            android:text="@string/text_contacts"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_90"
            android:background="@color/transparent"
            android:hint="@string/text_contacts_hit"
            android:textSize="@dimen/sp_16" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/white">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@color/line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/dp_10"
            android:text="@string/text_phone"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_90"
            android:background="@color/transparent"
            android:hint="@string/text_phone_hit"
            android:textSize="@dimen/sp_16" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_10"
            android:text="@string/text_load_code" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/white">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@color/line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/dp_10"
            android:text="@string/text_check_code"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_90"
            android:background="@color/transparent"
            android:hint="@string/text_code_hit"
            android:textSize="@dimen/sp_16" />


    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:background="@color/line" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_travel_custom_last"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_weight="1"
            android:background="@drawable/gray_btn_style"
            android:text="上一步"
            android:textColor="@color/white" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_weight="1"
            android:background="@drawable/travel_btn_style"
            android:text="提交定制需求"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>
