<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.baosteel.qcsh.ui.view.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_color"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rela_business_select"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@color/white">

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="@dimen/dp_10"
                    android:text="@string/text_business"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_80"
                    android:paddingLeft="@dimen/dp_10"
                    android:text="@string/text_life_restaurant"
                    android:textSize="@dimen/sp_16" />

                <ImageView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp_10"
                    android:src="@drawable/right_press"
                    android:text="@string/text_business"
                    android:textSize="@dimen/sp_16" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0.5"
                    android:layout_alignParentBottom="true"
                    android:background="@color/line" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginBottom="@dimen/dp_10"
                android:background="@color/white">

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="@dimen/dp_10"
                    android:text="@string/text_phone"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_80"
                    android:paddingLeft="@dimen/dp_10"
                    android:text="021-1536548"
                    android:textSize="@dimen/sp_16" />

                <ImageView
                    android:id="@+id/tv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp_10"
                    android:src="@drawable/right_press"
                    android:text="@string/text_business"
                    android:textSize="@dimen/sp_16" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0.5"
                    android:layout_alignParentBottom="true"
                    android:background="@color/line" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@color/white">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0.5"
                    android:layout_alignParentTop="true"
                    android:background="@color/line" />

                <TextView
                    android:id="@+id/tv8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="@dimen/dp_10"
                    android:text="@string/text_date"
                    android:textSize="@dimen/sp_16" />

                <ImageView
                    android:id="@+id/tv9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp_10"
                    android:src="@drawable/right_press"
                    android:text="@string/text_business"
                    android:textSize="@dimen/sp_16" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@color/white">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0.5"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@color/line" />

                <TextView
                    android:id="@+id/tv5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="@dimen/dp_10"
                    android:text="@string/text_time"
                    android:textSize="@dimen/sp_16" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rela_banquet_type"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginBottom="@dimen/dp_10"
                android:background="@color/white">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0.5"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@color/line" />

                <TextView
                    android:id="@+id/t10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="@dimen/dp_10"
                    android:text="@string/text_banquet_type"
                    android:textSize="@dimen/sp_16" />

                <ImageView
                    android:id="@+id/t11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp_10"
                    android:src="@drawable/right_press"
                    android:text="@string/text_business"
                    android:textSize="@dimen/sp_16" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0.5"
                    android:layout_alignParentBottom="true"
                    android:background="@color/line" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@color/white">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0.5"
                    android:layout_alignParentTop="true"
                    android:background="@color/line" />

                <TextView
                    android:id="@+id/tv11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="@dimen/dp_10"
                    android:text="@string/text_offter_space"
                    android:textSize="@dimen/sp_16" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@color/white">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0.5"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@color/line" />

                <TextView
                    android:id="@+id/tv12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="@dimen/dp_10"
                    android:text="@string/text_desk_num"
                    android:textSize="@dimen/sp_16" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@color/white">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0.5"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@color/line" />

                <TextView
                    android:id="@+id/tv13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="@dimen/dp_10"
                    android:text="@string/text_budget"
                    android:textSize="@dimen/sp_16" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0.5"
                    android:layout_alignParentTop="true"
                    android:background="@color/line" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_100"
                    android:background="@color/transparent"
                    android:gravity="top"
                    android:hint="@string/text_p_hit"
                    android:padding="@dimen/dp_10"
                    android:textSize="@dimen/sp_16" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0.5"
                    android:layout_alignParentBottom="true"
                    android:background="@color/line" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/white">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0.5"
                    android:layout_alignParentTop="true"
                    android:background="@color/line" />

                <TextView
                    android:id="@+id/tv14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="@dimen/dp_10"
                    android:text="@string/text_contacts"
                    android:textSize="@dimen/sp_16" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_90"
                    android:background="@color/transparent"
                    android:hint="@string/text_contacts_hit"
                    android:textSize="@dimen/sp_16" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@color/white">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0.5"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@color/line" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="@dimen/dp_10"
                    android:text="@string/text_phone"
                    android:textSize="@dimen/sp_16" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_90"
                    android:background="@color/transparent"
                    android:hint="@string/text_phone_hit"
                    android:textSize="@dimen/sp_16" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:text="@string/text_load_code" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginBottom="@dimen/dp_10"
                android:background="@color/white">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0.5"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:background="@color/line" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="@dimen/dp_10"
                    android:text="@string/text_check_code"
                    android:textSize="@dimen/sp_16" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_90"
                    android:background="@color/transparent"
                    android:hint="@string/text_code_hit"
                    android:textSize="@dimen/sp_16" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0.5"
                    android:layout_alignParentBottom="true"
                    android:background="@color/line" />

            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:background="@color/btn_color"
                android:text="@string/text_commit"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>